# iter-read

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
src/: impls.rs  lib.rs  tests.rs
