[package]
name = "iter-read"
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
license = "MIT/Apache-2.0"
description = "A Read implementation for iterators over u8 and related types"
repository = "https://github.com/birkenfeld/iter-read"
documentation = "http://birkenfeld.github.io/iter-read/iter_read/index.html"
keywords = ["iterator", "reader", "read"]

[features]
unstable = []
