[package]
name = "iter-read"
version = "0.2.1"
edition = "2018"
authors = ["Georg Brandl <georg@python.org>"]
license = "MIT/Apache-2.0"
description = "A Read implementation for iterators over u8 and related types"
repository = "https://github.com/birkenfeld/iter-read"
documentation = "http://docs.rs/iter-read"
keywords = ["iterator", "reader", "read"]

[features]
unstable = []
